# QEMU_Manager

./: .gitignore  CMakeLists.txt  README.md
config/: gui_config.glade  gui_styles.css
include/: builder.h  css.h  message_box.h  notebook.h  qmgr.h  qmgr_lib.h  widget.h
include/callbacks/: cb_exit.h  cb_hdd_create.h  cb_open_fd.h  cb_open_rom.h  cb_save_vm.h  cb_uefi_mode.h
src/: CMakeLists.txt  builder.c  css.c  main.c  message_box.c  notebook.c  qmgr_lib.c  widget.c
src/callbacks/: CMakeLists.txt  cb_exit.c  cb_hdd_create.c  cb_open_fd.c  cb_open_rom.c  cb_save_vm.c  cb_uefi_mode.c
